--- a/src/partials/6_blog.html
+++ b/src/partials/6_blog.html
@@ -1,8 +1,25 @@
 <div class="blog-wrapper">
   <picture>
     <source
-      media="(min-width: 768px) and (max-width: 1359px)"
-      srcset="./images/home/t/blog.jpg 1x, ./images/home/t/blog@2x.jpg 2x"
+      media="(min-width: 1360px)"
+      srcset="
+        ./images/home/dt/blog.jpg    1x,
+        ./images/home/dt/blog@2x.jpg 2x
+      "
+    />
+    <source
+      media="(min-width: 768px)"
+      srcset="
+        ./images/home/t/blog.jpg    1x,
+        ./images/home/t/blog@2x.jpg 2x
+      "
+    />
+    <source
+      media="(min-width: 320px)"
+      srcset="
+        ./images/home/m/blog.jpg    1x,
+        ./images/home/m/blog@2x.jpg 2x
+      "
     />
     <img src="./images/home/m/blog.jpg" alt="blog" />
   </picture>
