--- a/src/sass/0/_2_hero.scss
+++ b/src/sass/0/_2_hero.scss
@@ -6,8 +6,17 @@
 .hero .container {
   height: 533px;
   padding-top: 142px;
+  // background-position: center top;
   
-  background-image: url(../images/home/hero/m/showcase.jpg);
+  // background-image: url(../images/home/hero/m/showcase.jpg);
+  @media screen and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+      url(../images/home/hero/m/showcase@2x.jpg);
+  }
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(../images/home/hero/m/showcase.jpg);
   background-repeat: no-repeat;
   // -webkit-image-set(
   //   url(../images/home/hero/m/showcase.jpg) 1x
