--- a/src/sass/0/helpers/_presets.scss
+++ b/src/sass/0/helpers/_presets.scss
@@ -21,10 +21,15 @@ section {
   padding: 40px 0;
 }
 .container {
+  width: 320px;
   margin: 0 auto;
   padding: 0 30px;
   text-align: center;
 }
+
+
+
+
 .overtitle {
   font-weight: 400;
   font-size: 18px;
