--- a/src/sass/1_768/_9_callback.scss
+++ b/src/sass/1_768/_9_callback.scss
@@ -1,5 +1,7 @@
 .callback-wrapper {
+  width: 768px;
   display: flex;
+  margin: 0 auto;
   padding-bottom: 40px;
 }
 // .callback {
@@ -16,11 +18,11 @@
 }
 
 .callback input {
-//   width: 100%;
+  //   width: 100%;
   font-size: 18px;
   line-height: calc(23 / 18);
-//   padding: 8px 0 8px 8px;
-//   border: none;
+  //   padding: 8px 0 8px 8px;
+  //   border: none;
 }
 
 // .callback-name{
