--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -12,10 +12,24 @@
         <a href="#">
           <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases1.jpg    1x,
+                ./images/cases/dt/cases1@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases1.jpg    1x,
                 ./images/cases/t/cases1@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases1.jpg    1x,
+                ./images/cases/m/cases1@2x.jpg 2x
               "
             />
             <img src="./images/cases/m/cases1.jpg" alt="at the work" />
@@ -24,70 +38,149 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#"
-          ><picture>
+        <a href="#">
+          <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases2.jpg    1x,
+                ./images/cases/dt/cases2@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases2.jpg    1x,
                 ./images/cases/t/cases2@2x.jpg 2x
-              " />
-            <img src="./images/cases/m/cases2.jpg" alt="diagram" /></picture
-        ></a>
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases2.jpg    1x,
+                ./images/cases/m/cases2@2x.jpg 2x
+              "
+            />
+            <img src="./images/cases/m/cases2.jpg" alt="diagram" />
+          </picture>
+        </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#"
-          ><picture>
+        <a href="#">
+          <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases3.jpg    1x,
+                ./images/cases/dt/cases3@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases3.jpg    1x,
                 ./images/cases/t/cases3@2x.jpg 2x
-              " />
-            <img src="./images/cases/m/cases3.jpg" alt="pakt" /></picture
-        ></a>
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases3.jpg    1x,
+                ./images/cases/m/cases3@2x.jpg 2x
+              "
+            />
+            <img src="./images/cases/m/cases3.jpg" alt="pakt" />
+          </picture>
+        </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#"
-          ><picture>
+        <a href="#">
+          <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases4.jpg    1x,
+                ./images/cases/dt/cases4@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases4.jpg    1x,
                 ./images/cases/t/cases4@2x.jpg 2x
-              " />
-            <img src="./images/cases/m/cases4.jpg" alt="union" /></picture
-        ></a>
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases4.jpg    1x,
+                ./images/cases/m/cases4@2x.jpg 2x
+              "
+            />
+            <img src="./images/cases/m/cases4.jpg" alt="union" />
+          </picture>
+        </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#"
-          ><picture>
+        <a href="#">
+          <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases5.jpg    1x,
+                ./images/cases/dt/cases5@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases5.jpg    1x,
                 ./images/cases/t/cases5@2x.jpg 2x
-              " />
-            <img src="./images/cases/m/cases5.jpg" alt="workspace" /></picture
-        ></a>
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases5.jpg    1x,
+                ./images/cases/m/cases5@2x.jpg 2x
+              "
+            />
+            <img src="./images/cases/m/cases5.jpg" alt="workspace" />
+          </picture>
+        </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#"
-          ><picture>
+        <a href="#">
+          <picture>
             <source
-              media="(min-width: 768px) and (max-width: 1359px)"
+              media="(min-width: 1360px)"
+              srcset="
+                ./images/cases/dt/cases6.jpg    1x,
+                ./images/cases/dt/cases6@2x.jpg 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
               srcset="
                 ./images/cases/t/cases6.jpg    1x,
                 ./images/cases/t/cases6@2x.jpg 2x
-              " />
-            <img src="./images/cases/m/cases6.jpg" alt="sky" /></picture
-        ></a>
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              srcset="
+                ./images/cases/m/cases6.jpg    1x,
+                ./images/cases/m/cases6@2x.jpg 2x
+              "
+            />
+            <img src="./images/cases/m/cases6.jpg" alt="sky" />
+          </picture>
+        </a>
       </li>
     </ul>
-    
   </div>
 </section>
