--- a/src/partials/7_team.html
+++ b/src/partials/7_team.html
@@ -6,14 +6,31 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto,
       sapiente!
     </p>
+    
     <ul class="team-list list">
       <li class="team-item">
         <picture>
           <source
-            media="(min-width: 768px) and (max-width: 1359px)"
+            media="(min-width: 1360px)"
+            srcset="
+              ./images/team/dt/person1.jpg    1x,
+              ./images/team/dt/person1@2x.jpg 2x
+            "
+          />
+
+          <source
+            media="(min-width: 768px)"
             srcset="
               ./images/team/t/person1.jpg    1x,
               ./images/team/t/person1@2x.jpg 2x
+            "
+          />
+
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/team/m/person1.jpg    1x,
+              ./images/team/m/person1@2x.jpg 2x
             "
           />
           <img src="./images/team/m/person1.jpg" alt="person1" />
@@ -24,10 +41,26 @@
       <li class="team-item">
         <picture>
           <source
-            media="(min-width: 768px) and (max-width: 1359px)"
+            media="(min-width: 1360px)"
+            srcset="
+              ./images/team/dt/person2.jpg    1x,
+              ./images/team/dt/person2@2x.jpg 2x
+            "
+          />
+
+          <source
+            media="(min-width: 768px)"
             srcset="
               ./images/team/t/person2.jpg    1x,
               ./images/team/t/person2@2x.jpg 2x
+            "
+          />
+
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/team/m/person2.jpg    1x,
+              ./images/team/m/person2@2x.jpg 2x
             "
           />
           <img src="./images/team/m/person2.jpg" alt="person2" />
@@ -38,12 +71,29 @@
       <li class="team-item">
         <picture>
           <source
-            media="(min-width: 768px) and (max-width: 1359px)"
+            media="(min-width: 1360px)"
+            srcset="
+              ./images/team/dt/person3.jpg    1x,
+              ./images/team/dt/person3@2x.jpg 2x
+            "
+          />
+
+          <source
+            media="(min-width: 768px)"
             srcset="
               ./images/team/t/person3.jpg    1x,
               ./images/team/t/person3@2x.jpg 2x
             "
           />
+
+          <source
+            media="(min-width: 320px)"
+            srcset="
+              ./images/team/m/person3.jpg    1x,
+              ./images/team/m/person3@2x.jpg 2x
+            "
+          />
+
           <img src="./images/team/m/person3.jpg" alt="person3" />
         </picture>
         <h4 class="name">Steve Smith</h4>
