--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -1,9 +1,23 @@
 <div class="callback-wrapper">
   <picture>
     <source
-      media="(min-width: 768px) and (max-width: 1359px)"
+      media="(min-width: 1360px)"
+      srcset="
+        ./images/home/dt/contact.jpg    1x,
+        ./images/home/dt/contact@2x.jpg 2x
+      "
+    />
+
+    <source
+      media="(min-width: 768px)"
       srcset="./images/home/t/contact.jpg 1x, ./images/home/t/contact@2x.jpg 2x"
     />
+
+    <source
+      media="(min-width: 320px)"
+      srcset="./images/home/m/contact.jpg 1x, ./images/home/m/contact@2x.jpg 2x"
+    />
+
     <img src="./images/home/m/contact.jpg" alt="contact us" />
   </picture>
 
