выполнена верх.часть оформления из списка задания

--- a/src/partials/3_bespoke.html
+++ b/src/partials/3_bespoke.html
@@ -7,67 +7,34 @@
         ./images/mobile_w/img1@2x.webp 2x
       "
     />
-    <source
-      media="(min-width: 768px) and (max-width: 1199px)"
-      type="image/webp"
-      srcset="
-        ./images/tablet_w/img1.webp    1x,
-        ./images/tablet_w/img1@2x.webp 2x
-      "
-    />
-    <source
-      media="(min-width: 1200px)"
-      type="image/webp"
-      srcset="
-        ./images/desktop_w/img1.webp    1x,
-        ./images/desktop_w/img1@2x.webp 2x
-      "
-    />
-
-    <source
-      media="(max-width: 767px)"
-      srcset="
-        ./images/mobile/img1.jpg    1x,
-        ./images/mobile/img1@2x.jpg 2x
-      "
-    />
-    <source
-      media="(min-width: 768px) and (max-width: 1199px)"
-      srcset="
-        ./images/tablet/img1.jpg    1x,
-        ./images/tablet/img1@2x.jpg 2x
-      "
-    />
-    <source
-      media="(min-width: 1200px)"
-      srcset="
-        ./images/desktop/img1.jpg    1x,
-        ./images/desktop/img1@2x.jpg 2x
-      "
-    />
-    <img src="./images/mobile/img1.jpg" alt="Игорь" />
+    /img1.jpg" alt="name" />
   </picture> -->
 
-  <div class="wrapper">
-  <picture>
-    <source
-      media="(min-width: 1360px)"
-      srcset="./images/home/dt/people.jpg 1x, ./images/home/dt/people@2x.jpg 2x"
-    />
+<div class="wrapper">
+  <div class="pic-container">
+    <picture>
+      <source
+        media="(min-width: 1360px)"
+        srcset="
+          ./images/home/dt/people.jpg    1x,
+          ./images/home/dt/people@2x.jpg 2x
+        "
+      />
 
-    <source
-      media="(min-width: 768px)"
-      srcset="./images/home/t/people.jpg 1x, ./images/home/t/people@2x.jpg 2x"
-    />
+      <source
+        media="(min-width: 768px)"
+        srcset="./images/home/t/people.jpg 1x, ./images/home/t/people@2x.jpg 2x"
+      />
 
-    <source
-      media="(min-width: 320px)"
-      srcset="./images/home/m/people.jpg 1x, ./images/home/m/people@2x.jpg 2x"
-    />
+      <source
+        media="(min-width: 320px)"
+        srcset="./images/home/m/people.jpg 1x, ./images/home/m/people@2x.jpg 2x"
+      />
 
-    <img src="./images/home/m/people.jpg" alt="people" />
-  </picture>
-  <section class="bespoke">
+      <img src="./images/home/m/people.jpg" alt="people" />
+    </picture>
+  </div>
+  <section class="bespoke" id="about">
     <div class="container">
       <h3 class="overtitle">What you are looking for</h3>
       <h2 class="title">We provide bespoke solutions</h2>
