--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -1,4 +1,4 @@
-<section class="cases">
+<section class="cases" id="cases">
   <div class="container">
     <h3 class="overtitle">This is what we do</h3>
     <h2 class="title">Business Cases</h2>
