--- a/src/sass/0/_3_bespoke.scss
+++ b/src/sass/0/_3_bespoke.scss
@@ -16,3 +16,8 @@
 .bespoke .btn {
   border: 1px solid var(--text-color-dark-bg);
 }
+
+.bespoke .btn:hover {
+  color: var(--accent-color);
+  background-color: var(--text-color-dark-bg);
+}
