--- a/src/sass/1_768/helpers/_presets.scss
+++ b/src/sass/1_768/helpers/_presets.scss
@@ -20,6 +20,9 @@
 // section {
 //   padding: 40px 0;
 // }
+.pic-container  {
+  width: 100%;
+}
 // .container {
 //   margin: 0 auto;
 //   padding: 0 30px;
