--- a/src/partials/2_hero.html
+++ b/src/partials/2_hero.html
@@ -1,7 +1,9 @@
-<section class="hero">
+<section class="hero" id="home">
   <div class="container">
     <h1 class="hero-title title">The Sky Is The Limit</h1>
     <p class="hero-tagline">We provide world class financial assistance</p>
-    <button type="button" class="btn">Read More</button>
+    <button type="button" class="btn">
+      <span class="sign-more">> </span>Read More
+    </button>
   </div>
 </section>
