--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -1,27 +1,35 @@
 <div class="callback-wrapper">
-  <picture>
-    <source
-      media="(min-width: 1360px)"
-      srcset="
-        ./images/home/dt/contact.jpg    1x,
-        ./images/home/dt/contact@2x.jpg 2x
-      "
-    />
+  <div class="pic-container">
+    <picture>
+      <source
+        media="(min-width: 1360px)"
+        srcset="
+          ./images/home/dt/contact.jpg    1x,
+          ./images/home/dt/contact@2x.jpg 2x
+        "
+      />
 
-    <source
-      media="(min-width: 768px)"
-      srcset="./images/home/t/contact.jpg 1x, ./images/home/t/contact@2x.jpg 2x"
-    />
+      <source
+        media="(min-width: 768px)"
+        srcset="
+          ./images/home/t/contact.jpg    1x,
+          ./images/home/t/contact@2x.jpg 2x
+        "
+      />
 
-    <source
-      media="(min-width: 320px)"
-      srcset="./images/home/m/contact.jpg 1x, ./images/home/m/contact@2x.jpg 2x"
-    />
+      <source
+        media="(min-width: 320px)"
+        srcset="
+          ./images/home/m/contact.jpg    1x,
+          ./images/home/m/contact@2x.jpg 2x
+        "
+      />
 
-    <img src="./images/home/m/contact.jpg" alt="contact us" />
-  </picture>
-
-  <section class="callback">
+      <img src="./images/home/m/contact.jpg" alt="contact us" />
+    </picture>
+  </div>
+  
+  <section class="callback" id="callback">
     <div class="container">
       <h2 class="title">Request Callback</h2>
       <form class="callback-form">
