--- a/src/sass/0/helpers/_presets.scss
+++ b/src/sass/0/helpers/_presets.scss
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   color: var(--text-color);
+  user-select: none;
 }
 h1,
 h2,
@@ -20,15 +21,17 @@ img {
 section {
   padding: 40px 0;
 }
+.pic-container  {
+  width: 320px;
+  margin: 0 auto;
+}
+
 .container {
   width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 32px;
   text-align: center;
 }
-
-
-
 
 .overtitle {
   font-weight: 400;
