--- a/src/sass/0/_7_team.scss
+++ b/src/sass/0/_7_team.scss
@@ -9,7 +9,7 @@
   margin: 20px 0;
 }
 
-.team-list li:not(:last-child) {
+.team-list > li:not(:last-child) {
   margin-bottom: 20px;
 }
 
@@ -17,9 +17,31 @@
   transition: transform 250ms;
 }
 
-.team img:hover {
-  transform: scale(1.1);
-  box-shadow: 1px 1px 10px var(--accent-color);
+.thumb {
+  height: 186px;
+  overflow: hidden;
+}
+
+.slide {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6));
+  display: flex;
+  align-items: center;
+  height: 186px;
+  transition: transform 250ms;
+}
+
+.team-item:hover .slide {
+  transform: translateY(-100%);
+}
+
+.team-item:hover .thumb {
+  box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.4);
+  transform: scale(1.05);
+}
+
+.team .social-list li:hover svg {
+  // fill: var(--accent-color);
+  opacity: 0.8;
 }
 
 .team .name {
