attemp use lightbox2

--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -9,8 +9,8 @@
 
     <ul class="cases-gallery list">
       <li class="cases-gallery-item">
-        <a href="#">
-          <picture>
+        <a href="./images/cases/cases1.jpg" data-lightbox>
+          <!-- <picture>
             <source
               media="(min-width: 1360px)"
               srcset="
@@ -33,7 +33,8 @@
               "
             />
             <img src="./images/cases/m/cases1.jpg" alt="at the work" />
-          </picture>
+          </picture> -->
+          <img src="./images/cases/m/cases1.jpg" alt="at the work" />
         </a>
       </li>
 
