--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -9,8 +9,8 @@
 
     <ul class="cases-gallery list">
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases1.jpg" data-lightbox>
-          <!-- <picture>
+        <a href="./images/cases/cases1.jpg" data-lightbox="set">
+          <picture>
             <source
               media="(min-width: 1360px)"
               srcset="
@@ -33,13 +33,12 @@
               "
             />
             <img src="./images/cases/m/cases1.jpg" alt="at the work" />
-          </picture> -->
-          <img src="./images/cases/m/cases1.jpg" alt="at the work" />
+          </picture>
         </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#">
+        <a href="./images/cases/cases2.jpg" data-lightbox="set">
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -68,7 +67,7 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#">
+        <a href="./images/cases/cases3.jpg" data-lightbox="set">
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -97,7 +96,7 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#">
+        <a href="./images/cases/cases4.jpg" data-lightbox="set">
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -126,7 +125,7 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#">
+        <a href="./images/cases/cases5.jpg" data-lightbox="set">
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -155,7 +154,7 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="#">
+        <a href="./images/cases/cases6.jpg" data-lightbox="set">
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -181,6 +180,14 @@
             <img src="./images/cases/m/cases6.jpg" alt="sky" />
           </picture>
         </a>
+      </li>
+
+      <li class="cases-gallery-item">
+        <a href="./images/cases/cases7.jpg" data-lightbox="set"> </a>
+      </li>
+
+      <li class="cases-gallery-item">
+        <a href="./images/cases/cases8.jpg" data-lightbox="set"> </a>
       </li>
     </ul>
   </div>
