smooth scroll by IDs, var opacity header by scroll

--- a/src/sass/0/_4_cases.scss
+++ b/src/sass/0/_4_cases.scss
@@ -17,3 +17,8 @@
 .cases-gallery li:not(:last-child) {
   margin-bottom: 8px;
 }
+
+.cases-gallery-item:hover{
+  // outline:2px solid red;
+  opacity: .8;
+}
