--- a/src/sass/0/_1_header.scss
+++ b/src/sass/0/_1_header.scss
@@ -5,8 +5,10 @@ header {
 
 header .container {
   height: 120px;
-  padding-top: 20px;
-  background-color: #333;
+  padding: 20px 22px 0;
+}
+
+.hide {
   opacity: 0.8;
 }
 
