--- a/src/sass/2_1360/_2_hero.scss
+++ b/src/sass/2_1360/_2_hero.scss
@@ -4,6 +4,7 @@
 // }
 .hero .container {
   height: 768px;
+  padding-top: 279px;
 
   @media screen and (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
