--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="container">
+  <div class="container isVeiled" id="header">
     <div class="logo">
       <svg
         width="40"
