--- a/src/sass/0/_1_header.scss
+++ b/src/sass/0/_1_header.scss
@@ -1,16 +1,22 @@
 header {
   position: fixed;
   width: 100%;
+
+  transition: transform 500ms linear;
 }
 
 header .container {
   height: 120px;
   padding: 20px 22px 0;
-}
 
-.hide {
-  opacity: 0.8;
-}
+  transition: opacity 500ms linear;
+} // background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3));
+
+.isVeiled {
+  // background-color: #555;
+  // opacity: 0.;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+} // transform: translateY(-120);  // opacity: 0.1;
 
 .logo {
   display: flex;
