--- a/src/sass/1_768/_6_blog.scss
+++ b/src/sass/1_768/_6_blog.scss
@@ -6,12 +6,14 @@
 // =============================
 .blog {
   width: 400px;
-  // order: 1;
+  order: -1;
 }
 // =============================
-.blog-wrapper picture {
-  order: 2;
-} // .blog {
+// .blog-wrapper picture {
+// .blog-wrapper .pic-container {
+  // order: 2;
+// } 
+// .blog {
 //   background-color: var(--blog-bg);
 //   color: var(--text-color-dark-bg);
 // }
