netlify form integratoion

--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -28,11 +28,11 @@
       <img src="./images/home/m/contact.jpg" alt="contact us" />
     </picture>
   </div>
-  
+
   <section class="callback" id="callback">
     <div class="container">
       <h2 class="title">Request Callback</h2>
-      <form class="callback-form">
+      <form class="callback-form" netlify>
         <ul class="callback-list list">
           <li class="callback-item">
             <input
