expand html webp  imgs

--- a/src/partials/3_bespoke.html
+++ b/src/partials/3_bespoke.html
@@ -15,6 +15,33 @@
     <picture>
       <source
         media="(min-width: 1360px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/dt/people.webp    1x,
+          ./images/webp/home/dt/people@2x.webp 2x
+        "
+      />
+
+      <source
+        media="(min-width: 768px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/t/people.webp    1x,
+          ./images/webp/home/t/people@2x.webp 2x
+        "
+      />
+
+      <source
+        media="(min-width: 320px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/m/people.webp    1x,
+          ./images/webp/home/m/people@2x.webp 2x
+        "
+      />
+
+      <source
+        media="(min-width: 1360px)"
         srcset="
           ./images/home/dt/people.jpg    1x,
           ./images/home/dt/people@2x.jpg 2x
