--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -13,11 +13,39 @@
           <picture>
             <source
               media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases1.webp    1x,
+                ./images/webp/cases/dt/cases1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases1.webp    1x,
+                ./images/webp/cases/t/cases1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases1.webp    1x,
+                ./images/webp/cases/m/cases1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 1360px)"
               srcset="
                 ./images/cases/dt/cases1.jpg    1x,
                 ./images/cases/dt/cases1@2x.jpg 2x
               "
             />
+
             <source
               media="(min-width: 768px)"
               srcset="
@@ -25,6 +53,7 @@
                 ./images/cases/t/cases1@2x.jpg 2x
               "
             />
+
             <source
               media="(min-width: 320px)"
               srcset="
@@ -40,6 +69,31 @@
       <li class="cases-gallery-item">
         <a href="./images/cases/cases2.jpg" data-lightbox="set">
           <picture>
+            <source
+              media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases2.webp    1x,
+                ./images/webp/cases/dt/cases2@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases2.webp    1x,
+                ./images/webp/cases/t/cases2@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases2.webp    1x,
+                ./images/webp/cases/m/cases2@2x.webp 2x
+              "
+            />
+
             <source
               media="(min-width: 1360px)"
               srcset="
@@ -71,6 +125,31 @@
           <picture>
             <source
               media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases3.webp    1x,
+                ./images/webp/cases/dt/cases3@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases3.webp    1x,
+                ./images/webp/cases/t/cases3@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases3.webp 1x,
+                ./images/webp/cases/m/cases3@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 1360px)"
               srcset="
                 ./images/cases/dt/cases3.jpg    1x,
                 ./images/cases/dt/cases3@2x.jpg 2x
@@ -90,6 +169,7 @@
                 ./images/cases/m/cases3@2x.jpg 2x
               "
             />
+
             <img src="./images/cases/m/cases3.jpg" alt="pakt" />
           </picture>
         </a>
@@ -98,6 +178,31 @@
       <li class="cases-gallery-item">
         <a href="./images/cases/cases4.jpg" data-lightbox="set">
           <picture>
+            <source
+              media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases4.webp    1x,
+                ./images/webp/cases/dt/cases4@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases4.webp    1x,
+                ./images/webp/cases/t/cases4@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases4.webp    1x,
+                ./images/webp/cases/m/cases4@2x.webp 2x
+              "
+            />
+
             <source
               media="(min-width: 1360px)"
               srcset="
@@ -129,6 +234,31 @@
           <picture>
             <source
               media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases5.webp    1x,
+                ./images/webp/cases/dt/cases5@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases5.webp    1x,
+                ./images/webp/cases/t/cases5@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases5.webp    1x,
+                ./images/webp/cases/m/cases5@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 1360px)"
               srcset="
                 ./images/cases/dt/cases5.jpg    1x,
                 ./images/cases/dt/cases5@2x.jpg 2x
@@ -156,6 +286,31 @@
       <li class="cases-gallery-item">
         <a href="./images/cases/cases6.jpg" data-lightbox="set">
           <picture>
+            <source
+              media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/dt/cases6.webp    1x,
+                ./images/webp/cases/dt/cases6@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/t/cases6.webp    1x,
+                ./images/webp/cases/t/cases6@2x.webp 2x
+              "
+            />
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/cases/m/cases6.webp    1x,
+                ./images/webp/cases/m/cases6@2x.webp 2x
+              "
+            />
+
             <source
               media="(min-width: 1360px)"
               srcset="
