--- a/src/partials/7_team.html
+++ b/src/partials/7_team.html
@@ -13,6 +13,33 @@
           <picture>
             <source
               media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/dt/person1.webp    1x,
+                ./images/webp/team/dt/person1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/t/person1.webp    1x,
+                ./images/webp/team/t/person1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/m/person1.webp    1x,
+                ./images/webp/team/m/person1@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 1360px)"
               srcset="
                 ./images/team/dt/person1.jpg    1x,
                 ./images/team/dt/person1@2x.jpg 2x
@@ -34,6 +61,7 @@
                 ./images/team/m/person1@2x.jpg 2x
               "
             />
+
             <img src="./images/team/m/person1.jpg" alt="person1" />
           </picture>
           <div class="slide">
@@ -100,6 +128,33 @@
       <li class="team-item">
         <div class="thumb">
           <picture>
+            <source
+              media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/dt/person2.webp    1x,
+                ./images/webp/team/dt/person2@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/t/person2.webp    1x,
+                ./images/webp/team/t/person2@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/m/person2.webp    1x,
+                ./images/webp/team/m/person2@2x.webp 2x
+              "
+            />
+
             <source
               media="(min-width: 1360px)"
               srcset="
@@ -185,10 +240,38 @@
         <h4 class="name">Jane Doe</h4>
         <p class="position">Vice President</p>
       </li>
-      
+
       <li class="team-item">
         <div class="thumb">
           <picture>
+            <source
+              media="(min-width: 1360px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/dt/person3.webp    1x,
+                ./images/webp/team/dt/person3@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 768px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/t/person3.webp    1x,
+                ./images/webp/team/t/person3@2x.webp 2x
+              "
+            />
+
+            <source
+              media="(min-width: 320px)"
+              type="image/webp"
+              srcset="
+                ./images/webp/team/m/person3.webp    1x,
+                ./images/webp/team/m/person3@2x.webp 2x
+              "
+            />
+
+
             <source
               media="(min-width: 1360px)"
               srcset="
