--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -3,6 +3,34 @@
     <picture>
       <source
         media="(min-width: 1360px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/dt/contact.webp    1x,
+          ./images/webp/home/dt/contact@2x.webp 2x
+        "
+      />
+
+      <source
+        media="(min-width: 768px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/t/contact.webp    1x,
+          ./images/webp/home/t/contact@2x.webp 2x
+        "
+      />
+
+      <source
+        media="(min-width: 320px)"
+        type="image/webp"
+        srcset="
+          ./images/webp/home/m/contact.webp    1x,
+          ./images/webp/home/m/contact@2x.webp 2x
+        "
+      />
+      
+
+      <source
+        media="(min-width: 1360px)"
         srcset="
           ./images/home/dt/contact.jpg    1x,
           ./images/home/dt/contact@2x.jpg 2x
