change width nav underline and change sign on btn

--- a/src/partials/4_cases.html
+++ b/src/partials/4_cases.html
@@ -9,7 +9,11 @@
 
     <ul class="cases-gallery list">
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases1.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases1.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -67,7 +71,11 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases2.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases2.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -121,7 +129,11 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases3.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases3.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -143,7 +155,7 @@
               media="(min-width: 320px)"
               type="image/webp"
               srcset="
-                ./images/webp/cases/m/cases3.webp 1x,
+                ./images/webp/cases/m/cases3.webp    1x,
                 ./images/webp/cases/m/cases3@2x.webp 2x
               "
             />
@@ -176,7 +188,11 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases4.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases4.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -230,7 +246,11 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases5.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases5.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -284,7 +304,11 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases6.jpg" data-lightbox="set">
+        <a
+          href="./images/cases/cases6.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
           <picture>
             <source
               media="(min-width: 1360px)"
@@ -338,11 +362,21 @@
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases7.jpg" data-lightbox="set"> </a>
+        <a
+          href="./images/cases/cases7.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
+        </a>
       </li>
 
       <li class="cases-gallery-item">
-        <a href="./images/cases/cases8.jpg" data-lightbox="set"> </a>
+        <a
+          href="./images/cases/cases8.jpg"
+          data-lightbox="set"
+          data-title="Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, libero?"
+        >
+        </a>
       </li>
     </ul>
   </div>
