--- a/src/sass/2_1360/_9_callback.scss
+++ b/src/sass/2_1360/_9_callback.scss
@@ -12,9 +12,10 @@
   //   text-align: start;
 }
 
-// .callback-list {
-//   margin: 32px 0 40px;
-// }
+.callback-list {
+  // margin: 32px 0 40px;
+  margin-bottom: 36px;
+}
 
 // .callback input {
 // //   width: 100%;
