--- a/src/sass/0/_2_hero.scss
+++ b/src/sass/0/_2_hero.scss
@@ -44,6 +44,13 @@
 
 .sign-more {
   display: none;
+  margin-right: 5px;
+}
+
+.hero .btn {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .hero .btn:hover {
