--- a/src/sass/2_1360/_1_header.scss
+++ b/src/sass/2_1360/_1_header.scss
@@ -3,14 +3,15 @@
 //   display: flex;
 //   justify-content: space-between;
 // }
-header .container{
-  padding-top: 12px;
+header .container {
+  padding: 12px 8px 0;
 }
 
-// .logo {
-//   font-size: 32px;
-//   line-height: calc(42 / 32);
-// }
+.logo {
+  margin-left: 20px;
+  // font-size: 32px;
+  // line-height: calc(42 / 32);
+}
 // .part1 {
 //   color: var(--accent-color);
 // }
@@ -24,13 +25,17 @@ header .container{
 // }
 
 // .nav {
-  //   margin-top: 12px;
-  // display: block;
-  // justify-content: right;
-  // margin-left: 73px;
-  // width: 300px;
+//   margin-top: 12px;
+// display: block;
+// justify-content: right;
+// margin-left: 73px;
+// width: 300px;
 // }
 
 // .nav li:not(:first-child) {
-  // margin-left: 20px;
+// margin-left: 20px;
 // }
+.nav-item {
+  padding-left: 20px;
+  padding-right: 20px;
+}
