#3 - замена формы на заведомо работавшую из #1

--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -59,7 +59,10 @@
   <section class="callback" id="callback">
     <div class="container">
       <h2 class="title">Request Callback</h2>
-      <form class="callback-form" id="form" netlify>
+      <form netlify>
+        <label>name<input type="text"></label>
+      </form>
+      <!-- <form class="callback-form" id="form" netlify>
         <ul class="callback-list list">
           <li class="callback-item">
             <input
@@ -96,7 +99,7 @@
           </li>
         </ul>
         <button class="btn" type="submit" id="send_btn">Send</button>
-      </form>
+      </form> -->
     </div>
   </section>
 </div>
