--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -59,10 +59,7 @@
   <section class="callback" id="callback">
     <div class="container">
       <h2 class="title">Request Callback</h2>
-      <form netlify>
-        <label>name<input type="text"></label>
-      </form>
-      <!-- <form class="callback-form" id="form" netlify>
+      <form class="callback-form" id="form" netlify>
         <ul class="callback-list list">
           <li class="callback-item">
             <input
@@ -80,7 +77,7 @@
               placeholder="Enter email*"
               id="email"
             />
-            <div class="error">
+            <!-- <div class="error">
               <svg
                 width="16"
                 height="15"
@@ -95,11 +92,11 @@
                 />
               </svg>
               <p id="err_mess" class="visible">This is a required field</p>
-            </div>
+            </div> -->
           </li>
         </ul>
         <button class="btn" type="submit" id="send_btn">Send</button>
-      </form> -->
+      </form>
     </div>
   </section>
 </div>
