--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -69,7 +69,7 @@
               placeholder="Enter your name"
             />
           </li>
-          <li class="callback-item">
+          <!-- <li class="callback-item">
             <input
               type="email"
               class="callback-email"
@@ -77,7 +77,7 @@
               placeholder="Enter email*"
               id="email"
             />
-         </li>
+         </li> -->
         </ul>
                     <!-- <div class="error">
               <svg
