--- a/src/partials/9_callback.html
+++ b/src/partials/9_callback.html
@@ -79,7 +79,7 @@
             />
           </li>
         </ul>
-        <button class="btn" type="submit" id="send_btn">Send</button>
+        <button class="btn" type="submit">Send</button>
       </form>
     </div>
   </section>
