--- a/src/partials/9_callback_.html
+++ b/src/partials/9_callback_.html
@@ -69,7 +69,7 @@
               placeholder="Enter your name"
             />
           </li>
-          <!-- <li class="callback-item">
+          <li class="callback-item">
             <input
               type="email"
               class="callback-email"
@@ -77,9 +77,8 @@
               placeholder="Enter email*"
               id="email"
             />
-         </li> -->
-        </ul>
-                    <!-- <div class="error">
+            
+            <div class="error">
               <svg
                 width="16"
                 height="15"
@@ -94,9 +93,11 @@
                 />
               </svg>
               <p id="err_mess" class="visible">This is a required field</p>
-            </div> -->
- 
-        <button class="btn" type="submit" id="send_btn">Send</button>
+            </div>
+          </li>
+        </ul>
+
+        <button class="send_btn btn" type="submit" id="send_btn">Send</button>
       </form>
     </div>
   </section>
