#1 click in nav expand for the whole "li"

--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -25,48 +25,32 @@
         <span class="part1">Finance</span><span class="part2">Ledger</span>
       </p>
     </div>
-    
+
     <nav>
       <ul class="nav list">
-        <li class="nav-item">
-          <span
-            onclick="home.scrollIntoView({behavior:'smooth'})"
-            class="nav-link"
-          >
-            Home
-          </span>
+        <li class="nav-item" onclick="home.scrollIntoView({behavior:'smooth'})">
+          <span class="nav-link"> Home </span>
         </li>
-        <li class="nav-item">
-          <span
-            onclick="about.scrollIntoView({behavior:'smooth'})"
-            class="nav-link"
-          >
-            About
-          </span>
+        <li
+          class="nav-item"
+          onclick="about.scrollIntoView({behavior:'smooth'})"
+        >
+          <span class="nav-link"> About </span>
         </li>
-        <li class="nav-item">
-          <span
-            onclick="cases.scrollIntoView({behavior:'smooth'})"
-            class="nav-link"
-          >
-            Cases
-          </span>
+        <li
+          class="nav-item"
+          onclick="cases.scrollIntoView({behavior:'smooth'})"
+        >
+          <span class="nav-link"> Cases </span>
         </li>
-        <li class="nav-item">
-          <span
-            onclick="blog.scrollIntoView({behavior:'smooth'})"
-            class="nav-link"
-          >
-            Blog
-          </span>
+        <li class="nav-item" onclick="blog.scrollIntoView({behavior:'smooth'})">
+          <span class="nav-link"> Blog </span>
         </li>
-        <li class="nav-item">
-          <span
-            onclick="callback.scrollIntoView({behavior:'smooth'})"
-            class="nav-link"
-          >
-            Contact
-          </span>
+        <li
+          class="nav-item"
+          onclick="callback.scrollIntoView({behavior:'smooth'})"
+        >
+          <span class="nav-link"> Contact </span>
         </li>
       </ul>
     </nav>
