--- a/src/sass/0/_7_team.scss
+++ b/src/sass/0/_7_team.scss
@@ -20,6 +20,8 @@
 .thumb {
   height: 186px;
   overflow: hidden;
+  transition: all 250ms;
+
 }
 
 .slide {
@@ -36,7 +38,7 @@
 
 .team-item:hover .thumb {
   box-shadow: 2px 2px 12px 2px rgba(0, 0, 0, 0.4);
-  transform: scale(1.05);
+  transform: scale(1.025);
 }
 
 .team .social-list li:hover svg {
