#2 rename files & urls, cursor:pointer 4 links

--- a/src/partials/7_contact.html
+++ b/src/partials/7_contact.html
@@ -1,4 +1,4 @@
-<div class="callback-wrapper">
+<div class="contact-wrapper">
   <div class="pic-container">
     <picture>
       <source
@@ -56,23 +56,23 @@
     </picture>
   </div>
 
-  <section class="callback" id="callback">
+  <section class="contact" id="contact">
     <div class="container">
       <h2 class="title">Request Callback</h2>
-      <form class="callback-form" id="form" netlify>
-        <ul class="callback-list list">
-          <li class="callback-item">
+      <form class="contact-form" id="form" netlify>
+        <ul class="contact-list list">
+          <li class="contact-item">
             <input
               type="text"
-              class="callback-name"
+              class="contact-name"
               name="name"
               placeholder="Enter your name"
             />
           </li>
-          <li class="callback-item">
+          <li class="contact-item">
             <input
               type="email"
-              class="callback-email"
+              class="contact-email"
               name="email"
               placeholder="Enter email*"
               id="email"
