--- a/src/sass/0/_1_header.scss
+++ b/src/sass/0/_1_header.scss
@@ -53,6 +53,7 @@ header .container {
   padding-left: 6px;
   padding-right: 6px;
   padding-bottom: 8px;
+  cursor: pointer;
 }
 
 .nav-item:hover {
