--- a/src/sass/2_1360/_7_contact.scss
+++ b/src/sass/2_1360/_7_contact.scss
@@ -1,12 +1,12 @@
-.callback-wrapper {
+.contact-wrapper {
   width: 1360px;
   padding: 0;
 }
-.callback .container {
+.contact .container {
   width: 690px; //400px;
   padding: 0 28px; //32px;
 }
 
-.callback-list {
+.contact-list {
   margin-bottom: 36px;
 }
