--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -48,7 +48,7 @@
         </li>
         <li
           class="nav-item"
-          onclick="callback.scrollIntoView({behavior:'smooth'})"
+          onclick="contact.scrollIntoView({behavior:'smooth'})"
         >
           <span class="nav-link"> Contact </span>
         </li>
