--- a/src/sass/1_768/_7_contact.scss
+++ b/src/sass/1_768/_7_contact.scss
@@ -1,25 +1,25 @@
-.callback-wrapper {
+.contact-wrapper {
   width: 768px;
   display: flex;
   margin: 0 auto;
   padding-bottom: 40px;
 }
 
-.callback .container {
+.contact .container {
   width: 400px;
   padding: 0 32px;
 }
 
-.callback-list {
+.contact-list {
   margin-top: 32px;
 }
 
-.callback input {
+.contact input {
   font-size: 18px;
   line-height: calc(23 / 18);
 }
 
-.callback .btn {
+.contact .btn {
   font-size: 18px;
   line-height: calc(25 / 18);
 }
