#2 rename class 4 hide error & change method hive

--- a/src/sass/0/helpers/_utils.scss
+++ b/src/sass/0/helpers/_utils.scss
@@ -7,7 +7,7 @@
 .link {
   text-decoration: none;
   color: currentColor;
-} // text-decoration-color: currentColor; 
+}
 
 .invisible {
   position: absolute;
