#3 build sprite&correct size team photos 4 dt,dry

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,7 @@
+// svg{
+//   width: 100px;
+//   height: 100px;
+// }
 @import '~node_modules/modern-normalize/modern-normalize.css';
 
 @import "0/0_base"; 
