--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -12,9 +12,8 @@
 
     <nav>
       <ul class="nav list">
-        <li class="nav-item" onclick="home.scrollIntoView({behavior:'smooth'})">
-          <span class="nav-link"> Home </span>
-        </li>
+        <!-- <li class="nav-item" onclick="home.scrollIntoView({behavior:'smooth'})"> -->
+        <li class="nav-item"><a class="nav-link" href="#home"> Home </a></li>
         <li
           class="nav-item"
           onclick="about.scrollIntoView({behavior:'smooth'})"
