--- a/src/sass/0/helpers/_presets.scss
+++ b/src/sass/0/helpers/_presets.scss
@@ -8,9 +8,15 @@ body {
   color: var(--text-color);
   user-select: none;
 }
-
 body::-webkit-scrollbar {
-  width: 1em;
+  width: 1px;
+}
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 255, 0, 0.3);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: green;
+  outline: 1px solid #fff;
 }
 
 h1,
