--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -13,7 +13,7 @@
     <nav>
       <ul class="nav list">
         <!-- <li class="nav-item" onclick="home.scrollIntoView({behavior:'smooth'})"> -->
-        <li class="nav-item"><a class="nav-link" href="#home"> Home </a></li>
+        <li class="nav-item"><a class="nav-link link" href="#home"> Home </a></li>
         <li
           class="nav-item"
           onclick="about.scrollIntoView({behavior:'smooth'})"
