--- a/src/partials/1_header.html
+++ b/src/partials/1_header.html
@@ -13,27 +13,21 @@
     <nav>
       <ul class="nav list">
         <!-- <li class="nav-item" onclick="home.scrollIntoView({behavior:'smooth'})"> -->
-        <li class="nav-item"><a class="nav-link link" href="#home"> Home </a></li>
-        <li
-          class="nav-item"
-          onclick="about.scrollIntoView({behavior:'smooth'})"
-        >
-          <span class="nav-link"> About </span>
+
+        <li class="nav-item">
+          <a class="nav-link link" href="#home">Home</a>
         </li>
-        <li
-          class="nav-item"
-          onclick="cases.scrollIntoView({behavior:'smooth'})"
-        >
-          <span class="nav-link"> Cases </span>
+        <li class="nav-item">
+          <a class="nav-link link" href="#about">About</a>
         </li>
-        <li class="nav-item" onclick="blog.scrollIntoView({behavior:'smooth'})">
-          <span class="nav-link"> Blog </span>
+        <li class="nav-item">
+          <a class="nav-link link" href="#cases">Cases</a>
         </li>
-        <li
-          class="nav-item"
-          onclick="contact.scrollIntoView({behavior:'smooth'})"
-        >
-          <span class="nav-link"> Contact </span>
+        <li class="nav-item">
+          <a class="nav-link link" href="#blog">Blog</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link link" href="#contact">Contact</a>
         </li>
       </ul>
     </nav>
